--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
