--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "automata"
 version = "0.1.0"
-authors = ["Reisande <mryabk2@uic.edu>"]
+authors = ["Misha Ryabko (Reisande) <mryabk2@uic.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+json = "0.12.0"
+quick-xml = "0.17.0"
+rand = "0.7.2"
