--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-contextmenu": "^2.13.0",
     "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
