--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-json = "0.12.0"
 quick-xml = "0.17.0"
 rand = "0.7.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.41"
