--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,8 @@
     "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
