--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ quick-xml = "0.17.0"
 rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
+rocket = "0.4.2"
+rocket_contrib = "0.4.2"
