--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 rocket = "0.4.2"
-rocket_contrib = "0.4.2"
+
+[dependencies.rocket_contrib]
+version = "0.4.2"
+default-features = false
+features = ["json"]
