--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 rocket = "0.4.2"
+multimap = "0.8.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
