Implemented unit/end to end tests for finite_automata. Need to integrate them into the docker CI/CD though

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "automata"
-version = "0.1.0"
-authors = ["Misha Ryabko (Reisande) <mryabk2@uic.edu>"]
+version = "0.2.0"
+authors = ["Misha Ryabko (https://github.com/Reisande) <mryabk2@uic.edu>, Chris Cortina (https://github.com/heldeo) <ccorti2@uic.edu>"]
 edition = "2018"
 
 [profile.dev]
