--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 rocket = "0.4.2"
 multimap = "0.8.0"
+rustfmt-nightly = "1.4.11"
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
