--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "react-contextmenu": "^2.13.0",
     "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
+    "react-files": "^2.4.8",
+    "react-scripts": "^3.3.0",
     "react-sidebar": "^3.0.2",
     "reactjs-popup": "^1.5.0",
     "vis-network": "^6.4.4"
