--- a/temp-api/package.json
+++ b/temp-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/server.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +14,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "shelljs": "^0.8.3"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^13.1.6",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.1",
