Added wasm-bidgen ast macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,5 @@ rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 multimap = "0.8.0"
-
-[dependencies.rocket_contrib]
-version = "0.4.2"
-default-features = false
-features = ["json"]
+wee_alloc = { version = "0.4.2", optional = true }
+wasm-bindgen = "0.2"
