--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0.41"
 multimap = "0.8.0"
 wee_alloc = { version = "0.4.2", optional = true }
 wasm-bindgen = "0.2"
+serde-wasm-bindgen = "0.1.3"
