--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "logo_2.png",
+      "sizes": "32x32 24x24 16x16",
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
