--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/d3": "^5.7.2",
+    "@types/react": "^16.9.19",
+    "@types/react-bootstrap": "^0.32.20",
+    "@types/react-d3-graph": "^2.3.0",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-sidebar": "^3.0.0",
     "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "react": "^16.12.0",
@@ -14,6 +20,7 @@
     "react-scripts": "^3.3.1",
     "react-sidebar": "^3.0.2",
     "reactjs-popup": "^1.5.0",
+    "typescript": "^3.7.5",
     "vis-network": "^7.3.3"
   },
   "scripts": {
