Backend/equivalence between automata (#57)
* added all the testing framework which SHOULD wor with the autograder, now I just need to deserialize all relevant objects and test in production type environment

* Implemented reading from file passed in as arg

* Finished the reading and writing to buffer files, but have not tested due to lack of decryption function

* Fixed a few logic errors in the test generation

* Implemented fix to prevent seg faults when reading test cases

* Working and tested version of the equivalence testing. Need to clean up the grade function a bit so that students can see what the expected output of the test was, and what the actual output. Also the return value of grade() should be made into a class object.

* Cleaning up the branch a bit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,20 +6,16 @@ edition = "2018"
 
 [profile.dev]
 opt-level = 0
+debug = true
 
 [profile.release]
 opt-level = 3
+debug = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quick-xml = "0.17.0"
 rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 multimap = "0.8.0"
-
-[dependencies.rocket_contrib]
-version = "0.4.2"
-default-features = false
-features = ["json"]
