--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "automata"
 version = "0.2.0"
-authors = ["Misha Ryabko (https://github.com/Reisande) <mryabk2@uic.edu>, Chris Cortina (https://github.com/heldeo) <ccorti2@uic.edu>"]
+authors = ["Misha Ryabko (https://github.com/Reisande)", "<mryabk2@uic.edu>, Chris Cortina (https://github.com/heldeo) <ccorti2@uic.edu>"]
 edition = "2018"
 
 [profile.dev]
@@ -10,7 +10,7 @@ debug = true
 
 [profile.release]
 opt-level = 3
-debug = false
+debug = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
