--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ rand = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.41"
 multimap = "0.8.0"
-pest = "2.1.3"
+dynparser = "0.4.2"
