--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "cfgrammar-tool": "^1.0.0",
     "d3": "^5.15.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
