--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^3.3.1",
     "react-sidebar": "^3.0.2",
     "reactjs-popup": "^1.5.0",
+    "uuid": "^8.0.0",
     "vis-network": "^7.3.3"
   },
   "scripts": {
