--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
     "react-files": "^2.4.8",
+    "react-popup": "^0.10.0",
     "react-scripts": "^3.3.1",
     "react-sidebar": "^3.0.2",
     "react-tooltip": "^4.2.9",
